Atualiza index.html com melhorias, adiciona imagem de fundo e novos arquivos de imagem

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #f0f0f5;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('fundo.jpg') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
         .container {
-            background: white;
+            background: rgba(4, 131, 235, 0.664);
             padding: 2rem;
             border-radius: 1rem;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -31,8 +32,8 @@
         }
         button {
             padding: 0.8rem 2rem;
-            background-color: #0077cc;
-            color: white;
+            background-color: #00cc0a;
+            color: rgb(10, 10, 10);
             border: none;
             border-radius: 0.5rem;
             cursor: pointer;
@@ -54,17 +55,46 @@
 
     <script>
         function enviarPergunta() {
-            let pergunta = document.getElementById("pergunta").value.toLowerCase();
-            let resposta = "";
+            const problemas = [
+                {
+                    keywords: ["luz", "não acende", "nao acende", "lâmpada", "lampada"],
+                    resposta: "Verifique se a lâmpada está queimada ou se há disjuntor desarmado."
+                },
+                {
+                    keywords: ["tomada", "sem energia", "não funciona", "nao funciona"],
+                    resposta: "Pode ser um fio solto ou disjuntor desligado. Verifique com um multímetro."
+                },
+                {
+                    keywords: ["disjuntor", "desarma", "desligando", "desligou"],
+                    resposta: "Pode haver curto-circuito ou sobrecarga. Revise os circuitos ligados."
+                },
+                {
+                    keywords: ["fio", "queimado", "fiação", "curto-circuito", "curto circuito"],
+                    resposta: "Verifique a fiação para identificar possíveis fios queimados ou curto-circuitos."
+                },
+                {
+                    keywords: ["interruptor", "não funciona", "nao funciona", "botão"],
+                    resposta: "Pode ser um interruptor com defeito ou mau contato. Teste ou substitua o interruptor."
+                },
+                {
+                    keywords: ["lâmpada", "pisca", "piscando", "intermitente"],
+                    resposta: "Pode ser um problema na lâmpada ou na fiação. Verifique conexões e substitua a lâmpada se necessário."
+                },
+                {
+                    keywords: ["energia", "queda", "oscilação", "queda de energia"],
+                    resposta: "Pode ser problema na rede elétrica ou no disjuntor. Consulte a companhia elétrica se persistir."
+                }
+            ];
 
-            if (pergunta.includes("luz") && pergunta.includes("nao acende")) {
-                resposta = "Verifique se a lâmpada está queimada ou se há disjuntor desarmado.";
-            } else if (pergunta.includes("tomada") && pergunta.includes("sem energia")) {
-                resposta = "Pode ser um fio solto ou disjuntor desligado. Verifique com um multímetro.";
-            } else if (pergunta.includes("disjuntor") && pergunta.includes("desarma")) {
-                resposta = "Pode haver curto-circuito ou sobrecarga. Revise os circuitos ligados.";
-            } else {
-                resposta = "Desculpe, não entendi o problema. Tente descrever de outra forma.";
+            let pergunta = document.getElementById("pergunta").value.toLowerCase();
+            let resposta = "Desculpe, não entendi o problema. Tente descrever de outra forma.";
+
+            for (let problema of problemas) {
+                let match = problema.keywords.some(keyword => pergunta.includes(keyword));
+                if (match) {
+                    resposta = problema.resposta;
+                    break;
+                }
             }
 
             document.getElementById("resposta").innerText = resposta;
