--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🔌 ⚡ EletroIA</h1>
+        <h1>🤖 ⚡ EletroIA</h1>
         <p>Descreva o problema elétrico e receba sugestões técnicas!</p>
         <input id="pergunta" placeholder="Ex: A luz da sala não acende">
         <button onclick="enviarPergunta()">Perguntar</button>
